force-app/main/default/objects/IntegrationLogConfig__c/IntegrationLogConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>IntegrationLogConfig</label>
</CustomObject>