force-app/main/default/objects/IntegrationLogConfig__c/fields/Enable_Apex_Service_Logger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Apex_Service_Logger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Apex Service Logger</label>
    <type>Checkbox</type>
</CustomField>