force-app/main/default/objects/IntegrationLogConfig__c/fields/Enable_Integration_Logger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Integration_Logger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Integration Logger</label>
    <type>Checkbox</type>
</CustomField>