force-app/main/default/objects/IntegrationLogConfig__c/fields/Request_TimeOut__c.field-meta.xml
<CustomField>
    <fullName>Request_TimeOut__c</fullName>
    <label>Request TimeOut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>